crates/cockpitctl-render/tests/snapshots/golden_tests__golden_special_markdown_characters.snap
---
source: crates/cockpitctl-render/tests/golden_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `lint` | ❌ fail | yes | `artifacts/lint/report.json` · `artifacts/lint/comment.md` |

### Highlights

(showing up to **10**)

1. ❌ **lint**: `MD-STAR` at `src/lib.rs:1` — Use *bold* and **double bold** carefully
2. ⚠️ **lint**: `MD-UNDER` at `src/lib.rs:2` — Variable _foo_ and __bar__ are unused
3. ⚠️ **lint**: `MD-PIPE` at `src/lib.rs:3` — Expression a | b | c is ambiguous
4. ℹ️ **lint**: `MD-BACKTICK` at `src/lib.rs:4` — Consider using `Option<T>` instead of `Result<T, ()>`
5. ❌ **lint**: `MD-MIXED` at `src/lib.rs:5` — Found `*ptr | mask` with _unsafe_ block at **line 5**

### Annotations

1. ❌ **lint**: `MD-STAR` at `src/lib.rs:1` — Use *bold* and **double bold** carefully
2. ❌ **lint**: `MD-MIXED` at `src/lib.rs:5` — Found `*ptr | mask` with _unsafe_ block at **line 5**
3. ⚠️ **lint**: `MD-UNDER` at `src/lib.rs:2` — Variable _foo_ and __bar__ are unused
4. ⚠️ **lint**: `MD-PIPE` at `src/lib.rs:3` — Expression a | b | c is ambiguous
5. ℹ️ **lint**: `MD-BACKTICK` at `src/lib.rs:4` — Consider using `Option<T>` instead of `Result<T, ()>`

### Lint

- `lint`: ❌ fail · report `artifacts/lint/report.json` · comment `artifacts/lint/comment.md`

<!-- cockpit:end -->
