crates/cockpitctl-render/tests/snapshots/golden_tests__golden_stable_markers_present.snap
---
source: crates/cockpitctl-render/tests/golden_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `builddiag` | ✅ pass | yes | `artifacts/builddiag/report.json` · `artifacts/builddiag/comment.md` |
| `clippy` | ❌ fail | yes | `artifacts/clippy/report.json` · `artifacts/clippy/comment.md` |

### Highlights

(showing up to **5**)

1. ❌ **clippy**: `E001` at `src/main.rs:10` — Message for E001

### Annotations

1. ❌ **clippy**: `E001` at `src/main.rs:10` — Message for E001

### Build

- `builddiag`: ✅ pass · report `artifacts/builddiag/report.json` · comment `artifacts/builddiag/comment.md`

### Lint

- `clippy`: ❌ fail · report `artifacts/clippy/report.json` · comment `artifacts/clippy/comment.md`

<!-- cockpit:end -->
