crates/cockpitctl-render/tests/snapshots/golden_tests__golden_unicode_in_findings.snap
---
source: crates/cockpitctl-render/tests/golden_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `i18n-check` | ⚠️ warn | yes | `artifacts/i18n-check/report.json` · `artifacts/i18n-check/comment.md` |

### Highlights

(showing up to **10**)

1. ⚠️ **i18n-check**: `CJK-001` at `src/translations.rs:10` — 翻訳が見つかりません: 日本語テスト
2. ℹ️ **i18n-check**: `EMOJI-001` at `src/emoji.rs:20` — Emoji test: 🚀🔥💯 passed ✅ with 🎉
3. ⚠️ **i18n-check**: `ACCENT-001` at `src/locale.rs:30` — Résumé naïve café über Straße — diacritics preserved
4. ❌ **i18n-check**: `CYRILLIC-001` at `src/ru.rs:5` — Ошибка компиляции: неверный тип данных

### Annotations

1. ❌ **i18n-check**: `CYRILLIC-001` at `src/ru.rs:5` — Ошибка компиляции: неверный тип данных
2. ⚠️ **i18n-check**: `ACCENT-001` at `src/locale.rs:30` — Résumé naïve café über Straße — diacritics preserved
3. ⚠️ **i18n-check**: `CJK-001` at `src/translations.rs:10` — 翻訳が見つかりません: 日本語テスト
4. ℹ️ **i18n-check**: `EMOJI-001` at `src/emoji.rs:20` — Emoji test: 🚀🔥💯 passed ✅ with 🎉

### I18N

- `i18n-check`: ⚠️ warn · report `artifacts/i18n-check/report.json` · comment `artifacts/i18n-check/comment.md`

<!-- cockpit:end -->
