crates/cockpitctl-render/tests/snapshots/golden_tests__golden_warnings_only_non_blocking.snap
---
source: crates/cockpitctl-render/tests/golden_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `advisory` | ⚠️ warn | no | `artifacts/advisory/report.json` · `artifacts/advisory/comment.md` |

### Highlights

(showing up to **10**)

1. ⚠️ **advisory**: `WARN-001` at `package.json:5` — Message for WARN-001
2. ⚠️ **advisory**: `WARN-002` at `yarn.lock:100` — Message for WARN-002
3. ⚠️ **advisory**: `WARN-003` at `package.json:12` — Message for WARN-003

### Annotations

1. ⚠️ **advisory**: `WARN-001` at `package.json:5` — Message for WARN-001
2. ⚠️ **advisory**: `WARN-003` at `package.json:12` — Message for WARN-003
3. ⚠️ **advisory**: `WARN-002` at `yarn.lock:100` — Message for WARN-002

### Advisory

- `advisory`: ⚠️ warn · report `artifacts/advisory/report.json` · comment `artifacts/advisory/comment.md`
  - repro: `npm audit`

<!-- cockpit:end -->
